SERVER-46879 Fix profiler query in read_pref_cmd.js and not assert that the command runs on two nodes when hedging is enabled